# inky-mbta-tracker

./: .dockerignore  .gitignore  .gitleaks.toml  .tool-versions  AGENTS.md  CLAUDE.md  CODEOWNERS  CURL.md  Dockerfile  ENVIRONMENT_VARIABLES.md  README.md  REFACTORING_OPPORTUNITIES.md  SCHEMAS.md  Taskfile.yml  child_stations.json  compute_class_hashes.py  config.json.backup  docker-compose.yaml  grafana-dashboard.json  grafana-observability-dashboard.json  imt-out.json  local_alerts.json  local_shapes.json  local_vehicles.json  profile.html  profile.json  pyproject.toml  renovate.json  requirements.txt  track-prediction-algorithm.md  uvicorn_logging_config.json
.claude/: settings.local.json
.devcontainer/: README.md  devcontainer.json  docker-compose.devcontainer.yml
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  codeql.yml  docker-publish.yml  lint.yml  trivy.yml
.zed/: debug.json
docs/: trace-to-logs-correlation.md
docs/plans/: 2026-02-05-global-discord-batching.md  2026-02-07-discord-webhook-utility-refactor.md  2026-06-14-predictions-eta-design.md  2026-06-14-predictions-eta-plan.md
fly/: Caddyfile  Dockerfile  fly_config.json
fragments/: agent-prompt.txt  alerts-summary.txt
inky-mbta-tracker/: CURL.md  ai_summarizer.py  alert_stream.py  api_server.py  backup_scheduler.py  compute_class_hashes.py  config.json.example  config.py  consts.py  discord_webhook.py  exceptions.py  geo_math.py  geojson_creator.py  geojson_utils.py  healthcheck.py  load_test_sse.py  logging_setup.py  main.py  mbta_client.py  mbta_client_extended.py  mbta_gtfs.py  mbta_rate_limiter.py  mbta_responses.py  ollama.py  ollama_imt.py  ollama_queue_manager.py  otel_config.py  otel_utils.py  prometheus.py  redis_backup.py  redis_cache.py  schedule_tracker.py  sentry_config.py  shared_types.py  times_in_seconds.py  track_prediction_api.py  track_predictor.py  utils.py  uvicorn_logging.py  vehicle_counting.py  (+2 more)
inky-mbta-tracker/api/: __init__.py  app.py  core.py  lifespan.py  limits.py  middleware.py  models.py  summary_utils.py
inky-mbta-tracker/api/endpoints/: ai.py  alerts.py  health.py  live_schedules.py  predictions.py  schedules.py  shapes.py  stops.py  vehicles.py
inky-mbta-tracker/api/middleware/: cache_middleware.py  header_middleware.py  transaction_middleware.py
inky-mbta-tracker/api/services/: alerts.py  connection_tracker.py  predictions.py  vehicle_counts.py  vehicle_delta.py  vehicle_stream.py
inky-mbta-tracker/shared_types/: class_hashes.py  schema_versioner.py  shared_types.py
inky-mbta-tracker/tests/: _helpers.py  test_alert_stream.py  test_alerts_endpoint.py  test_connection_tracker.py  test_core.py  test_discord_webhook_batching.py  test_discord_webhook_helpers.py  test_geojson_utils.py  test_healthcheck.py  test_mbta_client.py  test_mbta_gtfs.py  test_mbta_rate_limiter.py  test_otel_utils.py  test_pattern_scores.py  test_predictions_endpoint.py  test_predictions_service.py  test_redis_cache.py  test_schedule_stream_filters.py  test_schedule_tracker.py  test_track_predictor.py  test_utils.py  test_vehicle_counts.py  test_vehicle_stream.py  test_vehicle_stream_diff.py  test_vehicles_stream.py
inky-mbta-tracker/track_predictor/: api_client.py  ml.py  ml_queue.py  pattern.py  redis_ops.py  stations.py  track_prediction_api.py  track_predictor.py  utils.py  validation.py
inky-mbta-tracker/webhook/: bluesky.py  discord_webhook.py  helpers.py  ntfy.py
